--- a/dopplehangar-frontend/package.json
+++ b/dopplehangar-frontend/package.json
@@ -9,8 +9,10 @@
     "bootstrap": "^5.3.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
+    "redux": "^5.0.1",
     "sass": "^1.79.4",
     "web-vitals": "^2.1.4"
   },
@@ -19,7 +21,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-    
   },
   "eslintConfig": {
     "extends": [
